--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,23 @@ h1,h2,h3,h4,h5,h6{
 #mobile-only{
     display: none;
 }
+#loader{
+    display: none;
+}
+#loader.on{
+    pointer-events: none;
+    top:0;
+    left:0;
+    width: 100vw;
+    height:100vh;
+    position: fixed;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #1b1b1be0;
+    z-index: 999999999;
+}
 @media (max-width:900px) {
     body{
         font-size:16px;
