--- a/styles.css
+++ b/styles.css
@@ -274,6 +274,8 @@ h1,h2,h3,h4,h5,h6{
 } */
 .intro{
     padding: 0 50px;
+    max-width: 1100px;
+    line-height: 1.5;
 }
 .intro a{
     margin-top:25px;
