--- a/styles.css
+++ b/styles.css
@@ -358,10 +358,29 @@ h1{
     top: 50px;
     left:50px;
     max-width: 80vw;
-    position: fixed;
+    position: absolute;
     z-index: 3;
     padding:25px;
     background: #171718cf;
+}
+.grid-intro.intro ul{
+    display: inline-block;
+    vertical-align: bottom;
+    padding-top:10px;
+}
+.grid-intro.intro img{
+    width: 200px;
+    margin-top:10px;
+}
+.grid-intro.intro ul{
+    margin-top:0;
+}
+.grid-intro.intro ul{
+    list-style: none;
+    padding-left:none;
+}
+.grid-intro.intro p{
+    margin-top:0;
 }
 #grid img:hover{
   transform-origin: center;
@@ -372,14 +391,37 @@ h1{
     position: relative;
     margin:50px;
 }
+#embedding{
+    max-height: 100px;
+    overflow: scroll;
+    margin: 10px 0;
+    border:1px solid;
+    padding: 5px;
+    font-size: 12px;
+}
+#cats {
+    padding-top:0;
+    margin-top:10px;
+    max-height:100px;
+    overflow: scroll;
+    padding-left:0;
+    border:1px solid;
+    display: block;
+}
+#cats li{
+    list-style: none;
+    border:1px solid;
+    padding-left:5px;
+}
+
 #history-icon::-webkit-scrollbar {
     width: 1em;
-  }
+}
    
-  #history-icon::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
-   
+#history-icon::-webkit-scrollbar-track {
+box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 #history-icons::-webkit-scrollbar-thumb {
     background-color: black;
     outline: 1px solid black;
