--- a/styles.css
+++ b/styles.css
@@ -237,12 +237,13 @@ h1{
     display:inline-block;
 }
 .kolam{
-    vertical-align: bottom;
-    padding: 10px;
-    position:absolute;
+    vertical-align: middle;
     top:10px;
     width:35px;
     left: 40px;
+}
+nav a:first-child{
+    padding-right:5px;
 }
 #clusters > *:nth-child(1),
 #clusters > *:nth-child(2),
@@ -567,12 +568,33 @@ box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     iframe{
         margin-top:50px;
     }
-    .kolam{
-        vertical-align: bottom;
-        padding: 10px;
-        position:absolute;
-        top:10px;
-        width:35px;
-        left:0;
+    nav{
+        width: calc(100% - 30px);
+        display: flex;
+        justify-content: space-between;
+        top:-5px;
+        padding:10px;
+        padding-bottom: 0;
     }
+    nav a{
+        padding:10px 0;
+        vertical-align: middle;
+    }
+    nav a{
+        padding-top:10px;
+    }
+    nav a:first-child{
+        padding-top:0;
+    }
+    #outer, .grid-intro.intro{
+        margin-top:55px;
+    }
+    .grid-intro.intro{
+        max-width: 100%;
+    }
+    nav a img{
+        margin-right:0;
+        margin-top:5px;
+    }
+
 }
