--- a/styles.css
+++ b/styles.css
@@ -246,9 +246,18 @@ h1{
     opacity: 0.2;
     transition:1s opacity;
 }
+
 @media (min-width:1400px) {
     #wrapper img{
         left: -300px;
+    }
+}
+@media (min-width:2000px) {
+    #wrapper img{
+        left: -1px;
+    }
+    #two #wrapper img{
+        left: 500px;
     }
 }
 @media (max-width:1250px) {
