--- a/styles.css
+++ b/styles.css
@@ -666,6 +666,13 @@ nav a:first-child{
     #outer{
         margin-top:48.5px;
     }
+    #outer.clust{
+        margin-top:0;
+    }
+    #outer.clust #instructions{
+        padding-top: 65px;
+        background-color: #101010;
+    }
     body{
         overflow-x:hidden;
         font-size:16px;
